--- a/JakartaLearningProject/Base.lproj/Main.storyboard
+++ b/JakartaLearningProject/Base.lproj/Main.storyboard
@@ -198,7 +198,7 @@
                                     <constraint firstAttribute="trailing" secondItem="92F-ge-r9z" secondAttribute="trailing" id="30O-fh-lSv"/>
                                     <constraint firstItem="92F-ge-r9z" firstAttribute="centerX" secondItem="bPw-og-bzk" secondAttribute="centerX" id="5CE-5B-LSl"/>
                                     <constraint firstItem="92F-ge-r9z" firstAttribute="centerY" secondItem="bPw-og-bzk" secondAttribute="centerY" id="6v3-eF-PfL"/>
-                                    <constraint firstAttribute="bottom" secondItem="92F-ge-r9z" secondAttribute="bottom" constant="-44" id="BTC-Tm-dhj"/>
+                                    <constraint firstAttribute="bottom" secondItem="92F-ge-r9z" secondAttribute="bottom" constant="200" id="BTC-Tm-dhj"/>
                                     <constraint firstItem="92F-ge-r9z" firstAttribute="top" secondItem="bPw-og-bzk" secondAttribute="top" constant="-44" id="Wbg-j7-SHh"/>
                                 </constraints>
                             </scrollView>
@@ -206,7 +206,6 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="bPw-og-bzk" secondAttribute="bottom" id="GFc-mh-DsP"/>
-                            <constraint firstAttribute="bottom" secondItem="bPw-og-bzk" secondAttribute="bottom" id="QEl-0p-Jnf"/>
                             <constraint firstItem="bPw-og-bzk" firstAttribute="leading" secondItem="QWV-aQ-ebS" secondAttribute="leading" id="USE-gm-nNK"/>
                             <constraint firstItem="92F-ge-r9z" firstAttribute="height" secondItem="I78-7b-mP9" secondAttribute="height" priority="250" id="UtM-Zx-GYX"/>
                             <constraint firstItem="bPw-og-bzk" firstAttribute="top" secondItem="QWV-aQ-ebS" secondAttribute="top" id="pKd-O4-JJ0"/>
@@ -548,6 +547,7 @@
                     <connections>
                         <outlet property="tableView" destination="AxL-LM-qmG" id="wTg-3k-nNh"/>
                         <segue destination="rn5-bT-KNt" kind="show" identifier="discoverMapSegue" id="JHZ-W2-gd1"/>
+                        <segue destination="1OZ-pV-MlG" kind="show" identifier="discoverInformationSegue" id="dSr-lk-Eve"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gtk-s8-Uby" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -573,6 +573,101 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xab-qF-7ic" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1863.7681159420292" y="716.51785714285711"/>
+        </scene>
+        <!--Discover Information Controller-->
+        <scene sceneID="iye-p0-TwZ">
+            <objects>
+                <viewController id="1OZ-pV-MlG" customClass="DiscoverInformationController" customModule="JakartaLearningProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="daS-Bf-Rwx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BzQ-gU-AbU">
+                                <rect key="frame" x="0.0" y="88" width="414" height="712"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uIJ-tV-Wvo">
+                                        <rect key="frame" x="0.0" y="-44" width="414" height="896"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jmF-Cx-1Io">
+                                                <rect key="frame" x="0.0" y="59" width="414" height="214"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="214" id="kO3-po-Lql"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qku-IC-vWR">
+                                                <rect key="frame" x="13" y="440" width="0.0" height="0.0"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <color key="textColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vk0-fS-R0y">
+                                                <rect key="frame" x="20" y="293" width="374" height="31.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBG-5U-H1e">
+                                                <rect key="frame" x="13" y="337.5" width="97" height="23"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                <color key="textColor" red="0.99763482810000004" green="0.75061158090000002" blue="0.31111527820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Information" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Hv-0I-J9q">
+                                                <rect key="frame" x="35" y="373.5" width="344" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="jmF-Cx-1Io" secondAttribute="trailing" id="3YH-d9-R6w"/>
+                                            <constraint firstItem="jmF-Cx-1Io" firstAttribute="top" secondItem="uIJ-tV-Wvo" secondAttribute="top" constant="59" id="6e1-2L-nNO"/>
+                                            <constraint firstAttribute="trailing" secondItem="7Hv-0I-J9q" secondAttribute="trailing" constant="35" id="GmL-OW-Xos"/>
+                                            <constraint firstItem="7Hv-0I-J9q" firstAttribute="top" secondItem="TBG-5U-H1e" secondAttribute="bottom" constant="13" id="Y5Q-bC-1QI"/>
+                                            <constraint firstItem="vk0-fS-R0y" firstAttribute="top" secondItem="jmF-Cx-1Io" secondAttribute="bottom" constant="20" id="hfL-M8-IBb"/>
+                                            <constraint firstItem="7Hv-0I-J9q" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="35" id="npN-vI-LsR"/>
+                                            <constraint firstAttribute="trailing" secondItem="vk0-fS-R0y" secondAttribute="trailing" constant="20" id="pHL-GD-6VR"/>
+                                            <constraint firstItem="vk0-fS-R0y" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="20" id="sUR-fp-liu"/>
+                                            <constraint firstItem="TBG-5U-H1e" firstAttribute="top" secondItem="vk0-fS-R0y" secondAttribute="bottom" constant="13" id="tDN-fM-dvh"/>
+                                            <constraint firstItem="TBG-5U-H1e" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" constant="13" id="u8y-Iw-Tka"/>
+                                            <constraint firstItem="jmF-Cx-1Io" firstAttribute="leading" secondItem="uIJ-tV-Wvo" secondAttribute="leading" id="wrT-7l-paa"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="uIJ-tV-Wvo" firstAttribute="leading" secondItem="BzQ-gU-AbU" secondAttribute="leading" id="3Rb-g0-gcc"/>
+                                    <constraint firstItem="uIJ-tV-Wvo" firstAttribute="top" secondItem="BzQ-gU-AbU" secondAttribute="top" constant="-44" id="9BY-Cc-mud"/>
+                                    <constraint firstItem="uIJ-tV-Wvo" firstAttribute="centerY" secondItem="BzQ-gU-AbU" secondAttribute="centerY" id="SsW-zt-65D"/>
+                                    <constraint firstAttribute="trailing" secondItem="uIJ-tV-Wvo" secondAttribute="trailing" id="czJ-v5-nbF"/>
+                                    <constraint firstItem="uIJ-tV-Wvo" firstAttribute="centerX" secondItem="BzQ-gU-AbU" secondAttribute="centerX" id="vQg-dV-0SP"/>
+                                    <constraint firstAttribute="bottom" secondItem="uIJ-tV-Wvo" secondAttribute="bottom" id="xEm-zs-jrg"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <constraints>
+                            <constraint firstItem="BzQ-gU-AbU" firstAttribute="leading" secondItem="jA1-pH-XSF" secondAttribute="leading" id="HLk-hb-uta"/>
+                            <constraint firstItem="uIJ-tV-Wvo" firstAttribute="height" secondItem="daS-Bf-Rwx" secondAttribute="height" priority="250" id="RlV-Bg-xLZ"/>
+                            <constraint firstItem="uIJ-tV-Wvo" firstAttribute="width" secondItem="daS-Bf-Rwx" secondAttribute="width" id="gXA-aO-YJn"/>
+                            <constraint firstItem="BzQ-gU-AbU" firstAttribute="top" secondItem="jA1-pH-XSF" secondAttribute="top" id="nN5-TQ-dJd"/>
+                            <constraint firstItem="BzQ-gU-AbU" firstAttribute="trailing" secondItem="jA1-pH-XSF" secondAttribute="trailing" id="rKh-pv-4uN"/>
+                            <constraint firstAttribute="bottom" secondItem="BzQ-gU-AbU" secondAttribute="bottom" id="tPf-HQ-Hmw"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="jA1-pH-XSF"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="VrX-dz-u5H"/>
+                    <size key="freeformSize" width="414" height="800"/>
+                    <connections>
+                        <outlet property="image" destination="jmF-Cx-1Io" id="dNQ-BW-4CE"/>
+                        <outlet property="informationLabel" destination="7Hv-0I-J9q" id="brk-H5-v1W"/>
+                        <outlet property="titleLabel" destination="vk0-fS-R0y" id="jL6-DP-7QH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sb3-Ep-ju2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2772" y="1482"/>
         </scene>
     </scenes>
     <resources>
